Fixed spacing on header

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -66,6 +66,7 @@ $brand-font-size: 1.5rem;
     .header-wrapper .logo
     {
         right: 20px;
+        margin-right: 0px;
     }
 }
 
@@ -79,6 +80,7 @@ $brand-font-size: 1.5rem;
     .header-wrapper .logo
     {
         right: 0px;
+        margin-right: 20px;
     }
 }
 
